--- a/src/accueil.html
+++ b/src/accueil.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Gestion des aides du Département de l'Ardèche :: Authentification</title>
     <link rel="stylesheet" href="lib/font-awesome/css/font-awesome.min.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.less.css">
 </head>
 
 <body class="main">
